--- a/variables.html
+++ b/variables.html
@@ -5,7 +5,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
-<body style="padding: 0 10px 0 10px">
+<body style="padding: 0 10px">
 <h2 style="margin-top: 10px">Conky Configuration Variables <small>Nothing more than a full screen version of the <a href="https://github.com/brndnmtthws/conky/wiki/Configuration-Variables#configuration-variables" target="_blank">source</a></small></h2>
 <p>Note: To see the complete list of variables that are available in your version of conky, see the man page (<code>man conky</code>).
 <table class="table table-striped table-condensed table-bordered">
