--- a/index.html
+++ b/index.html
@@ -5,19 +5,30 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
-<body style="padding: 0 10px">
-<h2 style="margin-top: 10px">Conky Configuration Documentation <small>Nothing more than full screen versions of the sources</small></h2>
+	<body style="padding: 0 10px">
+		<h2 style="margin-top: 10px">Conky Configuration Documentation <small>Nothing more than full screen versions of the sources</small></h2>
 
-<p>
-	I love <a target="_blank" href="https://github.com/brndnmtthws/conky/">Conky</a> but got a bit frustrated by the configuration variables table on the Github repo. The table isn't properly visible because it's too wide for the div it's in.<br><br>
+		<p>
+			I love <a target="_blank" href="https://github.com/brndnmtthws/conky/">Conky</a> but got a bit frustrated by the configuration variables table on the Github repo. The table isn't properly visible because it's too wide for the div it's in.<br><br>
 
-	This is nothing more than full screen versions of the configuration variables and settings tables.<br><br>
+			This is nothing more than full screen versions of the configuration variables and settings tables.<br><br>
 
-	I'm in no way connected to Conky. I made this for personal use but figured others might find it useful too.
-</p>
-<p>
-	<a class="btn btn-default" href="variables.html"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> Variables</a>
-	<a class="btn btn-default" href="settings.html"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Settings</a>
-</p>
-</body>
+			I'm in no way connected to Conky. I made this for personal use but figured others might find it useful too.
+		</p>
+		<p>
+			<a class="btn btn-default" href="variables.html"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> Variables</a>
+			<a class="btn btn-default" href="settings.html"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Settings</a>
+		</p>
+
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-90365352-5', 'auto');
+		  ga('send', 'pageview');
+		</script>
+
+	</body>
 </html>
