--- a/settings.html
+++ b/settings.html
@@ -3,6 +3,8 @@
 <head>
   <title>Conky Configuration Settings</title>
 
+  <meta property="og:description" name="Conky Configuration Settings" content="Easy to read Conky documentation - settings and variables">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body style="padding: 0 10px">
