--- a/variables.html
+++ b/variables.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Conky Configuration Variables</title>
 
+  <meta property="og:description" name="Conky Configuration Variables" content="Easy to read Conky documentation - settings and variables">
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body style="padding: 0 10px">
